  * Added support for improper torsions.
  * AtomGroup now has .bonds .angles .torsions and .impropers attributes which
    retrieverelevant TopologyGroups
  * Increased performance of topology.core.guess_bonds greatly
  * Added topology.core.guess_angles guess_torsions and guess_improper_torsions
    which given accurate bond information can calculate the rest of the
    topology info.


  Changes

  * __getstate__() and __setstate__() raise an NotImplementedError for
    Universe and AtomGroup; before they were silently accepted on
    pickling and a cryptic "TypeError: AtomGroup is not callable" was
    raised (see also Issue 173 for detailed explanation)
  * XTC/TRR reader raise IOError with errorcode EIO (instead of
    ENODATA) when the last frame is reached and EBADF (instead of
    EFAULT) for any other issues (partially addresses Issue 150,
    Windows compatibility)
  * Universe.bonds now returns a TopologyGroup not a list.  TopologyGroup can be
    iterated over; list(universe.bonds) should provide a fix to legacy code.

  Fixes

  * fixed creation of residues and segments in Merge() 
  * resolves Issue 188 regarding Helanal Finish Argument


04/01/14  orbeckst, jandom, zhuyi.xue, xdeupi, tyler.je.reddy,
          manuel.nuno.melo, danny.parton, sebastien.buchoux, denniej0,
	  rmcgibbo, richardjgowers, lennardvanderfeltz, bernardin.alejandro
          matthieu.chavent

  * 0.8.1

  (Note: 0.8.0 contains a subset of these changes; 0.8.0 is deprecated)

  Enhancements

  * Named selections can now be passed to selectAtoms (Issue 174)
  * (experimental) MDAnalysis.visualization namespace added along with 
    2D/3D streamplot modules & documentation for them
  * TRR file handling is now fully aware of missing coordinate/velocity/force
    information when reading and writing frames.
  * MDAnalysis.analysis.contacts.ContactAnalysis1 run() method
    now allows trajectory slicing (Issue 161)
  * Merge AtomGroups into a new Universe (Issue 157)